# radardsp

./: .gitignore  AGENTS.md  Makefile  README.md  environment.yaml  pyproject.toml
scripts/: convert_txt_to_npz.py  incremental.py
src/radarsig/: filters.py  io.py  parsers.py  utils.py
test/: test_io.py  test_parsers.py  test_utils.py
test/data_mock/: sample_pulse.txt
