# contents of pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radarsig"
version = "0.1.0"

[tool.pytest]
# --showlocals : traceback local variables
addopts = ["--showlocals"]
strict = true
# all warnings will cause tests to fail
filterwarnings = ["error"]
log_level = "INFO"
testpaths = [
  "test",
]

[tool.ruff.lint]
extend-select = [
  "B",      # flake8-bugbear, finds bug prone patterns
  "I",      # sorts includes
  "C4",     # looks for places that could use comprehensions
  "PT",     # helps to follow best pytest practices
  "FURB",   # collection of helpful cleanups from refurb tool
  "PYI",    # typing checks
]
